Fix alignment of navigation

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,6 +46,8 @@ header {
   ul {
     list-style: none;
     padding: 0;
+    margin: 0;
+    line-height: 2em;
   }
 
   .label {
